feat(datacompiler): initial result committing